2002-07-03  Maciej Stachowiak  <mjs@apple.com>

        WebKit part of fixes for:

	Radar 2950616 - JavaScript window.screenX and window.screenY always return -1
	Radar 2950614 - JavaScript window.screenLeft and window.screenTop
	properties are unimplemented
	Radar 2950609 - JavaScript window.outerHeight and
	window.outerWidth properties always return 0
	
	* WebView.subproj/IFHTMLView.mm:
        (-[IFHTMLView provisionalDataSourceChanged:]): Pass the real
	document view to the newly created bridge, since it will be ready
	by now and is needed by JavaScript.

2002-07-03  Maciej Stachowiak  <mjs@apple.com>

        * Plugins.subproj/IFPluginView.mm:
        (-[IFPluginView status:]): Fix build problem. Why doesn't
	compiling catch these more reliably?

2002-07-03  Richard Williamson  <rjw@apple.com>

        * Misc.subproj/IFNSViewExtras.m:
        (-[NSView _IF_printViewHierarchy:]):
        Debugging help.
        
        * WebView.subproj/IFHTMLView.mm:
        (-[IFHTMLView layout]):
        Added setLayouted(false).
        
        * WebView.subproj/IFWebFramePrivate.mm:
        (-[IFWebFrame _isLoadComplete]):
        Tweaks attempting to fix frame drawing problems.

2002-07-03  Maciej Stachowiak  <mjs@apple.com>

        WebCore part of fix for:

	Radar 2943465 - JavaScript window.defaultStatus property not implemented
	Radar 2943464 - JavaScript window.status property is not implemented
	Radar 2926213 - show url of moused-over link in status bar

	* WebCoreSupport.subproj/IFWebCoreBridge.mm:
	(-[IFWebCoreBridge setStatusText:]): Connect bridge status text
	setting to window context.
        * WebView.subproj/IFWebController.h:

2002-07-02  Chris Blumenberg  <cblu@apple.com>

	Added IFFileURLPolicyReveal. This makes things a little clearer for the client.

        * WebView.subproj/IFWebControllerPolicyHandler.h:
        * WebView.subproj/IFWebFramePrivate.mm:
        (-[IFWebFrame _shouldShowDataSource:]): support for IFFileURLPolicyReveal.
