@@ -1,3 +1,10 @@
+2002-07-03  Darin Adler  <darin@apple.com>
+
+        * Misc.subproj/IFDownloadHandler.mm:
+        (-[IFDownloadHandler finishedLoading]):
+        * WebView.subproj/IFWebController.h:
+	A couple places where it still said IFContentPolicyOpenExternally.
+
 2002-07-03  Maciej Stachowiak  <mjs@apple.com>
 
         WebKit part of fixes for:
